--- a/style.css
+++ b/style.css
@@ -7,54 +7,48 @@
 header {
     margin: 24px 0 0 57px;
 }
-.wrapper {
-    height: 100vh;
-    width: 100vw;
-}
-
 .container-left {
     display: inline-block;
-    width: 60%;
+    width: 50vw;
     padding-left: 100px;
-    margin-top: 20%;
-
+    margin-top: 10px;
 }
-
 .container-right {
     display: inline-block;
     background-color: rgba(93, 93, 125, 0.16);
     height: 100vh;
-    width: 60%;
+    width: 50vw;
     position: absolute;
 }
-
 img {
+    width: 300px;
+    height: 300px;
     position: relative;
-    top: 25%;
-    right: 125px;
+    margin-top: 100px;
+    
 }
 
 h1 {
-    font-weight: 400;
-    font-size: 60px;
+    font-weight: 400px;
+    font-size: 40px;
     line-height: 80px;
     color: #5d5d7d;
-    width: 368px;
+    width: 300px;
 }
 
 p {
     font-weight: 300;
-    font-size: 28px;
+    font-size: 25px;
     line-height: 48px;
     color: #5d5d7d;
     opacity: 0.6;
-    margin: 18px 0;
+    margin: 18px 0 10px 0;
     width: 540px;
 }
 
 button {
-    width: 269px;
-    height: 62px;
+    width: 250px;
+    height: 60px;
     background: #9499ea;
     box-shadow: 0px 10 px 24 px rgba(148, 153, 234, 0.979959);
     font-size: 24px;
@@ -86,7 +80,6 @@ a:nth-child(2) {
     opacity: 0.4;
 }
 
-/* somente uma palavra em apacidade*/
 a:hover {
     opacity: 0.4;
 }
@@ -98,51 +91,45 @@ a:active {
 /* quando tiver ativo */
 
 
-@media screen and (max-whidth:700px) {
-    .container-left {
-        width: 80%;
-        height: 50%;
-        padding: 0px;
-        margin: 0%;
-    }
+ @media (max-width: 900px) {
 
-    .container-right {
+    body{
+        overflow: hidden; 
+    }
+    .container-left { /*paragrafo h1 e botao*/
         display: block;
-        height: auto;
-        width: 80%;
-        position: static;
-        padding: 40px;
-    }
-
-    img {
-        position: static;
-        max-width: 100%;
-    }
-
-    header {
+        width: auto;  
+        height: auto;  
+        margin: 0 0 10px 0;   
+            
+      } 
+    header{
         display: none;
-    }
-
-    h1 {
-
-        font-size: 36px;
-        line-height: 52px;
-        width: auto;
-        margin: 0px 50px 0 50px;
-        text-align: center;
-    }
-
-    p {
-        margin: 40px 50px;
-        width: auto;
-        text-align: center;
-        font-size: 14px;
-        line-height: 24px;
-    }
-
-    button {
-        margin: 0 auto;
+    } 
+    .container-right { /*img e menu*/
         display: block;
-
+        position: static;
+        width: auto;  
+        height: auto;  
+    }  
+    h1{
+        width: 400px ;
+        font-size: 24px;
+        margin-left:-60px ;
+        margin-bottom: -10px;        
     }
-}
+    p{
+        width: 400px;
+        margin-left: -70px;
+        font-weight: 300;
+        font-size: 16px;
+    }  
+    img{
+        width: 200px;
+        height: 200px;
+    } 
+
+}  
+    
+
+    
